[package]
name = "breakfast"
version = "0.1.0"
authors = ["Matti Annala <matti.annala@uta.fi>", "Gnanavel Mutharasu <gnanavel.mutharasu@gmail.com>"]
description = "BreakFast is a toolkit for detecting chromosomal rearrangements based on high throughput sequencing data"
readme = "README.md"
keywords = ["bioinformatics", "rearrangement", "structural variant", "sequencing"]
license = "MIT"
repository = "https://github.com/annalam/breakfast.git"

[dependencies]
docopt = "*"
bio = "*"
regex = "*"
rust-htslib = "0.15.0"
